criando estrutura html

--- a/aula03/index.html
+++ b/aula03/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hierarquia de combinadores CSS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <h1>Primeiro Parágrafo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil labore explicabo fugiat dolore voluptatem neque ipsa laborum deleniti! Saepe, dignissimos iusto. Non doloremque, necessitatibus itaque in corporis nemo accusantium dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum explicabo tempora id accusantium iusto et iure sunt debitis non earum, qui, asperiores expedita quisquam doloremque eligendi blanditiis aperiam ad esse.</p>
+    </div>
+    <div>
+        <h1>Segundo Parágrafo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil labore explicabo fugiat dolore voluptatem neque ipsa laborum deleniti! Saepe, dignissimos iusto. Non doloremque, necessitatibus itaque in corporis nemo accusantium dignissimos.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum explicabo tempora id accusantium iusto et iure sunt debitis non earum, qui, asperiores expedita quisquam doloremque eligendi blanditiis aperiam ad esse.</p>
+    </div>
 </body>
 </html>
