criando exemplo para aula 03

--- a/aula03/index.html
+++ b/aula03/index.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>Primeiro Parágrafo</h1>
+    <header>
+        <h1>combinadores CSS</h1>
+        <p>paragrafo descendente</p>
+        <p>paragrafo irmão</p>
+    </header>
+    <main>
+        <h2>Primeira parte do doc. HTML</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil labore explicabo fugiat dolore voluptatem neque ipsa laborum deleniti! Saepe, dignissimos iusto. Non doloremque, necessitatibus itaque in corporis nemo accusantium dignissimos.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum explicabo tempora id accusantium iusto et iure sunt debitis non earum, qui, asperiores expedita quisquam doloremque eligendi blanditiis aperiam ad esse.</p>
-    </div>
-    <div>
-        <h1>Segundo Parágrafo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil labore explicabo fugiat dolore voluptatem neque ipsa laborum deleniti! Saepe, dignissimos iusto. Non doloremque, necessitatibus itaque in corporis nemo accusantium dignissimos.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum explicabo tempora id accusantium iusto et iure sunt debitis non earum, qui, asperiores expedita quisquam doloremque eligendi blanditiis aperiam ad esse.</p>
-    </div>
+    </main>
+    <h2>Segunda parte do doc. HTML</h2>
+    <p id="irmao-geral">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi iusto aspernatur velit, vitae quam ab nihil fugit. Placeat dolorem totam explicabo nulla dolorum? A facere est quis voluptatem illo veniam.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam delectus consectetur voluptatibus ratione pariatur cupiditate ipsam necessitatibus in! Accusantium, ratione! Illo facilis recusandae delectus reprehenderit esse error a, harum provident?</p>
 </body>
 </html>
