--- a/aula04/index.html
+++ b/aula04/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            /* Cor do texto */
+            color: rgb(2, 35, 128); 
+
+            /* Tipo de fonte */
+            font-family: 'Courier New', Courier, monospace;
+
+            /* Peso da fonte */
+            font-size: 40px;
+        }
+
+        header p {
+            /* Cor do texto */
+             color: darkviolet;
+        }
+
+        main p {
+            /* Tamanho da fonte */
+            font-size: 16px;
+
+            /* Estilo da fonte */
+            font-style: italic;
+
+            /* Peso da fonte */
+            font-weight: 800;
+
+            /* Tipo de fonte */
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+        <h1>Propriedades de Texto</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore voluptatibus assumenda maxime veniam rerum ducimus. Nobis delectus deleniti, aut ad asperiores quaerat maxime natus quo perspiciatis vel officia voluptate fugit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga recusandae eos officia, modi suscipit, iste mollitia veritatis ducimus obcaecati eligendi voluptate necessitatibus ipsam! Totam minus necessitatibus inventore obcaecati voluptates fuga!</p>
+    </header>
+    <main>
+        <h2>Título 1</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis non impedit voluptatem deserunt magni, adipisci tempora iure dolores a corporis ad distinctio iusto nihil voluptates, doloremque quae optio similique alias!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab impedit commodi qui! Ipsa quos dolor consequatur deleniti in, vitae dolorem ex enim ullam labore soluta fugit. Fuga, officia ipsa?</p>
+
+        <h2>Título 2</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis non impedit voluptatem deserunt magni, adipisci tempora iure dolores a corporis ad distinctio iusto nihil voluptates, doloremque quae optio similique alias!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab impedit commodi qui! Ipsa quos dolor consequatur deleniti in, vitae dolorem ex enim ullam labore soluta fugit. Fuga, officia ipsa?</p>
+    </main>
 </body>
 </html>
