--- a/aula04/index.html
+++ b/aula04/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Propriedades de Texto</title>
     <style>
         h1 {
             /* Cor do texto */
