organizando arquivo das aulas

--- a/Incorporacao-css/index.html
+++ b/Incorporacao-css/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body> 
-    <h1 style="">Bem-vindo!!</h1> <!-- Estilo Inline -->
+    <h1 style="color: aqua;">Bem-vindo!!</h1> <!-- Estilo Inline -->
     <p>Vamos nessa jornada juntos de aprendizagem!</p>
 </body>
 </html>
